--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -178,6 +178,8 @@ services:
     environment:
       - MINIO_ROOT_USER=${MINIO_ACCESS_KEY:-minioadmin}
       - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY:-minioadmin}
+    labels:
+      - "traefik.http.services.storage.loadbalancer.server.port=9000"
     volumes:
       - minio_data:/data
     networks:
